assets/css/layouts/header.css
/* header used at the top of all pages, including site primary-navigation */
header.page-header {
  background-color: var(--background-color-secondary);
  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.2);
}

.page-header-inner {
  /* NOTE: keeps the nav list dropdown a similar width to its corresponding link / list item */
  --min-nav-link-width: 6rem;
  --horiz-nav-item-gap: 0.75rem;
  position: relative;
  max-width: var(--page-width-wide);
  margin: 0 auto;
}

/* NOTE: at 784px width switch to horizontal navigation */
@media screen and (min-width: 748px) {
  .page-header-inner {
    padding: 0.5rem 0;
  }
}

.page-header a[href] {
  padding: var(--spacing-sm) var(--spacing-mmd);
  display: inline-block;
  text-decoration: none;
}

.page-header a[href]:visited {
  color: var(--text-color-link);
}

.page-header a[href]:hover {
  color: var(--color-accent-invert);
  background-color: var(--color-accent);
}

.page-header a[href]:focus-visible,
.page-header button.nav-button:focus-visible {
  outline: var(--focus-style-outline);
  /* NOTE: negative offset used to prevent focus indicator from being obscured */
  outline-offset: calc(-1 * var(--focus-style-width));
}

@supports not selector(:focus-visible) {
  .page-header a[href]:focus,
  .page-header button.nav-button:focus {
    outline: var(--focus-style-outline);
    /* NOTE: negative offset used to prevent focus indicator from being obscured */
    outline-offset: calc(-1 * var(--focus-style-width));
  }
}

.page-header a[href].skip-link {
  position: absolute;
  top: var(--main-nav-height);
  left: var(--spacing-md);
  background-color: var(--background-color-secondary);
  z-index: 1;
}

.page-header a[href].skip-link:focus-visible {
  height: auto;
  width: auto;
  clip: initial;
  clip-path: initial;
  overflow: initial;
  white-space: initial;
}

@supports not selector(:focus-visible) {
  .page-header a[href].skip-link:focus {
    height: auto;
    width: auto;
    clip: initial;
    clip-path: initial;
    overflow: initial;
    white-space: initial;
  }
}

@media screen and (min-width: 748px) {
  /* down arrow for menu items with nested children */
  .page-header nav a[href].with-arrow-down {
    position: relative;
    padding-right: 2rem;
  }

  .page-header nav a[href].with-arrow-down::after {
    content: "";
    display: block;
    width: 0;
    height: 0;
    position: absolute;
    right: 0;
    top: 2rem;
    margin-top: -5.5px;
    margin-right: 0.75rem;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-top: 5px solid currentColor;
  }
}

.page-header nav {
  position: relative;
  display: grid;
  grid-template-columns: auto auto;
  grid-auto-flow: row;
  justify-content: space-between;
  isolation: isolate;
  z-index: 1;
}

@media screen and (min-width: 748px) {
  .page-header nav {
    grid-template-columns: auto 1fr;
    justify-content: initial;
  }
}

button.nav-button {
  display: flex;
  margin-left: auto;
  align-items: center;
  gap: 0.25rem;
  padding: 0.5rem 0.75rem;
  font-weight: normal;
  color: var(--text-color-link);
  background-color: transparent;
}

button.nav-button:hover {
  color: var(--color-accent-invert);
  background-color: var(--color-accent);
}

@media screen and (min-width: 748px) {
  button.nav-button {
    display: none;
  }
}

nav ul.nav-list,
nav ul.with-dropdown {
  margin: 0;
}

nav ul.nav-list {
  grid-column: span 2;
}

@media screen and (min-width: 748px) {
  nav ul.nav-list {
    grid-column: span 1;
  }
}

.js-enabled nav > ul {
  position: relative;
  display: none;
  text-align: center;
  background-color: var(--background-color-secondary);
}

.js-enabled nav > ul.expanded {
  display: flex;
  flex-direction: column;
}

@media screen and (min-width: 748px) {
  .js-enabled nav > ul,
  nav > ul {
    position: relative;
    display: flex;
    flex-direction: row;
    gap: var(--horiz-nav-item-gap);
    align-items: baseline;
    text-align: start;
    margin-bottom: 0;
  }
}

nav ul li a {
  border-bottom: 1px solid;
}

@media screen and (min-width: 748px) {
  nav ul > li:nth-last-child(2) {
    margin-left: auto;
  }

  nav ul li a {
    min-width: var(--min-nav-link-width);
    border-bottom: none;
  }
}

@media screen and (min-width: 748px) {
  nav ul li > ul.with-dropdown {
    position: absolute;
    display: flex;
    flex-direction: column;
    gap: var(--horiz-nav-item-gap);
    background-color: var(--background-color-secondary);
    padding: 0.25rem;
    overflow: hidden;
    width: 1px;
    height: 1px;
    clip-path: inset(50%);
  }

  nav ul li:focus-within > ul.with-dropdown,
  nav ul li:hover > ul.with-dropdown {
    overflow: auto;
    min-width: var(--min-nav-link-width);
    width: auto;
    height: auto;
    clip-path: none;
  }
}

nav ul li,
nav ul li a {
  width: 100%;
}

@media screen and (min-width: 748px) {
  nav ul li,
  nav ul li a {
    width: auto;
  }
}

